--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,5 +22,11 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Anton", sans-serif;
+background-color: black;
+}
+
+#inter
+{
+  font-family: "Inter", sans-serif;
 }
